--- a/cn.zh-CN/镜像/公共镜像/公共镜像发布记录.md
+++ b/cn.zh-CN/镜像/公共镜像/公共镜像发布记录.md
@@ -20,18 +20,16 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 |Anolis OS 8.2 RHCK|anolisos\_8\_2\_x64\_20G\_rhck\_alibase\_20210529.vhd|2021-05-29|-   发布龙蜥（Anolis）OS 8镜像。更多信息，请参见[龙蜥（Anolis）OS](https://openanolis.cn/anolisos)
 -   100%兼容CentOS 8软件生态，且兼容其它主流 Linux发行版
 -   提供CentOS到Anolis OS的迁移工具，帮助您将CentOS系统及应用顺滑迁移至Anolis OS
--   适用地域：西南1（成都） |
+-   适用地域：华东1（杭州）、华北2（北京）、华南2（河源）、西南1（成都）、英国（伦敦）、德国（法兰克福）、新加坡、印度尼西亚（雅加达）、马来西亚（吉隆坡）、澳大利亚（悉尼）、阿联酋（迪拜） |
 
 ## CentOS
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
 |CentOS 8.3|centos\_8\_3\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.18.0-240.22.1.el8\_3.x86\_64
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北5（呼和浩特）、西南1（成都）、中国（香港）、新加坡 |
+-   更新内容：更新最新补丁包 |
 |CentOS 7.9|centos\_7\_9\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：3.10.0-1160.25.1.el7.x86\_64
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北5（呼和浩特）、西南1（成都）、中国（香港）、新加坡 |
+-   更新内容：更新最新补丁包 |
 |CentOS 8.3|centos\_8\_3\_x64\_20G\_alibase\_20210420.vhd|2021-04-20|-   内核版本：4.18.0-240.22.1.el8\_3.x86\_64
 -   更新内容：更新最新补丁包 |
 |CentOS 7.9|centos\_7\_9\_x64\_20G\_alibase\_20210420.vhd|2021-04-20|-   内核版本：3.10.0-1160.24.1.el7.x86\_64
@@ -156,11 +154,9 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
 |Debian 10.9|debian\_10\_9\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.19.0-16-amd64
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北5（呼和浩特）、西南1（成都）、中国（香港）、新加坡 |
+-   更新内容：更新最新补丁包 |
 |Debian 9.13|debian\_9\_13\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.9.0-15-amd64
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北5（呼和浩特）、西南1（成都）、中国（香港）、新加坡 |
+-   更新内容：更新最新补丁包 |
 |Debian 10.9|debian\_10\_9\_x86\_20G\_alibase\_20210420.vhd|2021-04-20|-   内核版本：4.19.0-16-amd64
 -   更新内容：更新最新补丁包 |
 |Debian 9.13|debian\_9\_13\_x64\_20G\_alibase\_20210420.vhd|2021-04-20|-   内核版本：4.9.0-15-amd64
@@ -279,14 +275,11 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
 |Ubuntu20.04|ubuntu\_20\_04\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：5.4.0-74-generic
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北5（呼和浩特）、西南1（成都）、中国（香港）、新加坡 |
+-   更新内容：更新最新补丁包 |
 |Ubuntu18.04|ubuntu\_18\_04\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.15.0-144-generic
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北5（呼和浩特）、西南1（成都）、中国（香港）、新加坡 |
+-   更新内容：更新最新补丁包 |
 |Ubuntu16.04|ubuntu\_16\_04\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.4.0-210-generic
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北5（呼和浩特）、西南1（成都）、中国（香港）、新加坡 |
+-   更新内容：更新最新补丁包 |
 |Ubuntu20.04|ubuntu\_20\_04\_x64\_20G\_alibase\_20210420.vhd|2021-04-20|-   内核版本：5.4.0-73-generic
 -   更新内容：更新最新补丁包 |
 |Ubuntu18.04|ubuntu\_18\_04\_x64\_20G\_alibase\_20210420.vhd|2021-04-20|-   内核版本：4.15.0-143-generic
@@ -415,8 +408,7 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
 |Opensuse 15.2|opensuse\_15\_2\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：5.3.18-lp152.75-default
--   更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北5（呼和浩特）、西南1（成都）、中国（香港）、新加坡 |
+-   更新最新补丁包 |
 |Opensuse 15.2|opensuse\_15\_2\_x64\_20G\_alibase\_20210420.vhd|2021-04-20|-   内核版本：5.3.18-lp152.69-default
 -   更新最新补丁包 |
 |Opensuse 15.2|opensuse\_15\_2\_x64\_20G\_alibase\_20210318.vhd|2021-03-18|-   内核版本：5.3.18-lp152.66-default
