--- a/cn.zh-CN/实例/实例规格族.md
+++ b/cn.zh-CN/实例/实例规格族.md
@@ -4533,7 +4533,9 @@ xn4、n4、mn4和e4的特点如下：
 |----|--|
 |本地存储|本地存储，或者数据缓存盘，是指挂载在云服务器ECS所在物理机（宿主机）上的本地磁盘，是一种临时块存储。使用二进制单位GiB。在释放实例计算资源（vCPU + 内存）、宕机迁移等情况下，本地存储上的数据会丢失。详细的信息，请参见[本地盘](/cn.zh-CN/块存储/块存储介绍/本地盘.md)。|
 |网络带宽|网络带宽能力指出方向和入方向相加能达到的最大能力。 **说明：** 实例规格指标均在测试数据环境下验证获得。在真实场景中，受实例负载、组网模型等其他因素的影响，实例的性能表现可能存在差异。建议您先进行业务压测了解实例的性能表现，以选择合适的实例规格。 |
-|网络收发包PPS|网络收发包能力指出方向和入方向相加能达到的最大能力。网络收发包测试方法，请参见[网络性能测试方法](https://help.aliyun.com/document_detail/55757.html)。 **说明：** 实例规格指标均在测试数据环境下验证获得。在真实场景中，受实例负载、镜像版本、组网模型等其他因素的影响，实例的性能表现可能存在差异。建议您先进行业务压测了解实例的性能表现，以选择合适的实例规格。 |
+|网络收发包PPS|网络收发包能力指出方向和入方向相加能达到的最大能力。 通用的网络收发包测试方法，请参见[使用Netperf测试网络性能](https://help.aliyun.com/document_detail/55757.html)。g7、c7、r7实例的推荐网络收发包测试方法，请参见[使用Pktgen测试网络性能](https://help.aliyun.com/document_detail/260258.html)。
+
+**说明：** 实例规格指标均在测试数据环境下验证获得。在真实场景中，受实例负载、镜像版本、组网模型等其他因素的影响，实例的性能表现可能存在差异。建议您先进行业务压测了解实例的性能表现，以选择合适的实例规格。 |
 |连接数|连接又称网络会话，是客户端与服务器建立连接并传输数据的过程。网络五元组（包括源IP、目的IP、源端口、目的端口、协议）唯一确定一个连接，ECS实例的连接数包括通过TCP、UDP、ICMP协议建立的连接。|
 |多队列|主网卡支持的最大网卡队列数。除弹性裸金属服务器实例规格外，辅助网卡支持的最大网卡队列数与主网卡一致。|
 |弹性网卡|弹性网卡的数量包括一块主网卡。|
