--- a/cn.zh-CN/实例/管理实例/查看实例信息.md
+++ b/cn.zh-CN/实例/管理实例/查看实例信息.md
@@ -10,7 +10,7 @@ keyword: [阿里云, ecs, 轮询, 工单填表]
 
 [ECS管理控制台](https://ecs.console.aliyun.com/#/home)的首页默认为概览页面。
 
-在概览页面中，您可以查看账号下ECS实例的概况，包括以下几个部分信息。
+在概览页面中，您可以查看账号下ECS实例的概况，包括以下几个部分信息：
 
 -   **待处理事件**
 
@@ -56,7 +56,7 @@ keyword: [阿里云, ecs, 轮询, 工单填表]
 
 1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
 
-2.  在左侧导航栏，单击**实例与镜像** \> **实例**。
+2.  在左侧导航栏，选择**实例与镜像** \> **实例**。
 
 3.  在顶部菜单栏左上角处，选择地域。
 
@@ -77,7 +77,7 @@ keyword: [阿里云, ecs, 轮询, 工单填表]
 
 1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
 
-2.  在左侧导航栏，单击**实例与镜像** \> **实例**。
+2.  在左侧导航栏，选择**实例与镜像** \> **实例**。
 
 3.  在顶部菜单栏左上角处，选择地域。
 
