--- a/intl.zh-CN/最佳实践/数据恢复/误删文件后恢复数据.md
+++ b/intl.zh-CN/最佳实践/数据恢复/误删文件后恢复数据.md
@@ -48,7 +48,7 @@ cd extundelete-0.2.4                                #进入程序目录
 ./configure                                         #如下图表示安装成功
 ```
 
-![部署extundelete工具](../images/p12896.png)
+![部署extundelete工具](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4494893261/p12896.png)
 
 ```
 make && make install
