--- a/intl.zh-CN/最佳实践/数据恢复/误删文件后恢复数据.md
+++ b/intl.zh-CN/最佳实践/数据恢复/误删文件后恢复数据.md
@@ -48,7 +48,7 @@ cd extundelete-0.2.4                                #进入程序目录
 ./configure                                         #如下图表示安装成功
 ```
 
-![部署extundelete工具](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4494893261/p12896.png)
+![部署extundelete工具](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8755893261/p12896.png)
 
 ```
 make && make install
@@ -66,7 +66,7 @@ make && make install
     fdisk -l
     ```
 
-    ![检查磁盘和分区情况](../images/p12898.png)
+    ![检查磁盘和分区情况](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8755893261/p12898.png)
 
 2.  将分区后的磁盘挂载到/zhuyun目录下，然后在/zhuyun下新建测试文件hello，并写入内容`test`。
 
@@ -82,7 +82,7 @@ make && make install
     md5sum hello
     ```
 
-    ![记录文档的md5值](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0275688951/p12899.png)
+    ![记录文档的md5值](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8755893261/p12899.png)
 
 4.  模拟删除hello文件。
 
@@ -104,7 +104,7 @@ make && make install
 extundelete --inode 2 /dev/vdb1       #为查找某i节点中的内容，使用2则说明为整个分区搜索，如果需要进入目录搜索，只须要指定目录I节点即可。这是可以看到删除的文件名和inode。
 ```
 
-        ![恢复文件](../images/p12900.png)
+        ![恢复文件](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8755893261/p12900.png)
 
     2.  ```
 /usr/local/bin/extundelete  --restore-inode 12  /dev/vdb1    #恢复删除的文件
@@ -112,7 +112,7 @@ extundelete --inode 2 /dev/vdb1       #为查找某i节点中的内容，使用2
 
         这个时候会在执行命令的同级目录下出现RECOVERED\_FILES目录。
 
-        ![生成恢复后的文件](../images/p12901.png)
+        ![生成恢复后的文件](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8755893261/p12901.png)
 
 7.  通过md5sum命令查看恢复后RECOVERED\_FILES文件的md5值。
 
