--- a/cn.zh-CN/实例/实例规格族.md
+++ b/cn.zh-CN/实例/实例规格族.md
@@ -1980,7 +1980,7 @@ hfc6的特点如下：
 -   依托神龙架构，将大量虚拟化功能卸载到专用硬件，降低虚拟化开销，提供稳定可预期的超高性能
 -   计算：
     -   处理器与内存配比为1:2
-    -   处理器：3.1 GHz主频的Intel ® Xeon ® Platinum 8269（Cascade Lake），睿频3.5 GHz，计算性能稳定
+    -   处理器：3.1 GHz主频的Intel ® Xeon ® Platinum 8269CY（Cascade Lake），睿频3.5 GHz，计算性能稳定
 
         **说明：** 本实例规格族处理器提供3.1 GHz主频。由于Intel ISS特性原因，您查看到的主频可能显示为更低的数字。阿里云正在紧急修复该显示问题。该显示问题不影响您购买规格的主频频率。
 
@@ -2093,7 +2093,7 @@ hfg6的特点如下：
 -   依托神龙架构，将大量虚拟化功能卸载到专用硬件，降低虚拟化开销，提供稳定可预期的超高性能
 -   计算：
     -   处理器与内存配比为1:4
-    -   处理器：3.1 GHz主频的Intel ® Xeon ® Platinum 8269（Cascade Lake），睿频3.5 GHz，计算性能稳定
+    -   处理器：3.1 GHz主频的Intel ® Xeon ® Platinum 8269CY（Cascade Lake），睿频3.5 GHz，计算性能稳定
 
         **说明：** 本实例规格族处理器提供3.1 GHz主频。由于Intel ISS特性原因，您查看到的主频可能显示为更低的数字。阿里云正在紧急修复该显示问题。该显示问题不影响您购买规格的主频频率。
 
@@ -2206,7 +2206,7 @@ hfr6的特点如下：
 -   依托神龙架构，将大量虚拟化功能卸载到专用硬件，降低虚拟化开销，提供稳定可预期的超高性能
 -   计算：
     -   处理器与内存配比为1:8
-    -   处理器：3.1 GHz主频的Intel ® Xeon ® Platinum 8269（Cascade Lake），睿频3.5 GHz，计算性能稳定
+    -   处理器：3.1 GHz主频的Intel ® Xeon ® Platinum 8269CY（Cascade Lake），睿频3.5 GHz，计算性能稳定
 
         **说明：** 本实例规格族处理器提供3.1 GHz主频。由于Intel ISS特性原因，您查看到的主频可能显示为更低的数字。阿里云正在紧急修复该显示问题。该显示问题不影响您购买规格的主频频率。
 
