--- a/intl.zh-CN/运维与监控/事件通知/事件通知列表/块存储事件通知.md
+++ b/intl.zh-CN/运维与监控/事件通知/事件通知列表/块存储事件通知.md
@@ -19,7 +19,7 @@ keyword: [事件通知, 系统事件, 自动化, 消息通知, ecs]
 
 块存储只有异常类事件，不存在维护类系统事件。在事件发生和结束时，均可以发出事件通知。不同系统事件对应的事件通知名称请参见下文[附录：块存储系统事件对应的事件通知名称](#section_0p8_lij_brj)。
 
-以块存储性能受到严重影响（Stalled）的系统事件为例。事件通知的JSON格式如下所示。
+以块存储性能受到严重影响（Stalled）的系统事件为例。事件通知的JSON格式如下所示：
 
 -   首次发布块存储系统事件时，事件具有executeStartTime属性。
 
@@ -94,7 +94,7 @@ content字段解释：
 
 当数据盘完成挂载或者卸载时，云服务器ECS会发送云盘完成操作成功或失败的事件。详情请参见[挂载数据盘](/intl.zh-CN/块存储/云盘/挂载数据盘.md)和[卸载数据盘](/intl.zh-CN/块存储/云盘/卸载数据盘.md)。
 
-事件通知的JSON格式如下所示。
+事件通知的JSON格式如下所示：
 
 ```
 {
@@ -135,7 +135,7 @@ content字段解释：
 
 通过关闭**随实例释放**，释放ECS实例时，挂载的云盘（包括系统盘和数据盘）都会被转换成按量付费数据盘而保留下来。详情请参见[释放云盘](/intl.zh-CN/块存储/云盘/释放云盘.md)。
 
-事件通知的JSON格式如下所示。
+事件通知的JSON格式如下所示：
 
 ```
 {
@@ -152,7 +152,7 @@ content字段解释：
     "content": {
     "diskId" : "d-t4ndyqve********n4ds",
     "result" : "accomplished"
-    },
+    }
 }
 ```
 
@@ -170,10 +170,10 @@ content字段解释：
 
 以下场景会触发欠费释放事件通知：
 
--   如果块存储位于中国内地地域中，但账号没有实名认证
--   账户欠费导致按量付费块存储被释放
+-   如果块存储位于中国内地地域中，但账号没有实名认证。
+-   账户欠费导致按量付费块存储被释放。
 
-事件通知的JSON格式如下所示。
+事件通知的JSON格式如下所示：
 
 ```
 {
@@ -190,7 +190,7 @@ content字段解释：
     "content": {
     "instanceId" : "i-bp1792********an2ukf",
     "diskId" : "d-t4ndyqve********n4ds"
-    },
+    }
 }
 ```
 
