--- a/cn.zh-CN/块存储/云盘基础操作/释放云盘.md
+++ b/cn.zh-CN/块存储/云盘基础操作/释放云盘.md
@@ -23,7 +23,7 @@ keyword: [释放云盘, 删除云盘, deletedisk, 阿里云, ecs]
 
 -   无论是系统盘还是数据盘，开启与关闭随实例释放都有如下影响：
     -   开启后，云盘在您释放ECS实例时被一起释放。
-    -   关闭后，云盘在所属实例到期或者欠费十五天后，或者您主动释放实例时，被自动转化为按量付费数据盘并保留下来。 为避免云盘保留失败，您的账号余额不能小于100元，并已完成实名认证。
+    -   关闭后，云盘在所属实例到期或者欠费十五天后，或者您主动释放实例时，被自动转化为按量付费数据盘并保留下来。为避免云盘保留失败，您的账号余额不能小于100元，并已完成实名认证。
 
         **说明：** 被保留下来的云盘采用按量付费计费方式，会产生计费账单。您可以在费用中心根据云盘ID查看对应的消费详情。
 
@@ -68,13 +68,17 @@ keyword: [释放云盘, 删除云盘, deletedisk, 阿里云, ecs]
 
 1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
 
-2.  在左侧导航栏，选择**存储与快照** \> **云盘**。
+2.  在左侧导航栏，选择**实例与镜像** \> **实例**。
 
 3.  在顶部菜单栏左上角处，选择地域。
 
-4.  找到目标云盘，在**操作**栏处，选择**更多** \> **编辑属性**。
+4.  找到需要操作的实例，单击实例ID进入**实例详情**页。
 
-5.  在编辑云盘属性弹窗中，勾选或取消勾选**云盘随实例释放**，单击**确定**。
+5.  在**实例详情**页的导航栏，选择**本地实例磁盘**。
+
+6.  找到目标云盘，在**操作**栏处，选择**更多** \> **修改属性**。
+
+7.  在修改云盘属性弹窗中，选中或取消选中**云盘随实例释放**，单击**确定**。
 
     **说明：** 取消勾选**云盘随实例释放**后，云盘在所属实例到期或者欠费十五天后，或者您主动释放实例时，被自动转化为按量付费数据盘并保留下来。
 
