--- a/intl.zh-CN/运维与监控/系统事件/订阅事件通知.md
+++ b/intl.zh-CN/运维与监控/系统事件/订阅事件通知.md
@@ -2,6 +2,8 @@
 
 所有系统事件均可以通过云监控配置报警规则，当事件发生时会及时通知您。
 
+如果事件报警规则需要作用于指定应用分组的实例上，则请确保您已创建应用分组，且已将资源添加至该应用分组，操作方法请参见[t6144.md\#](/intl.zh-CN/应用分组/创建应用分组.md)和[添加资源至应用分组](/intl.zh-CN/应用分组/添加资源至应用分组.md)。
+
 云监控的报警服务为您提供以下两种事件报警通知能力，当阿里云产品发生系统异常时，您可以及时知晓事件发生，并自动处理异常事件。
 
 -   提供通过邮件、钉钉机器人的方式，对事件发生进行报警。
