--- a/intl.zh-CN/实例/管理实例/使用实例元数据/查看实例元数据.md
+++ b/intl.zh-CN/实例/管理实例/使用实例元数据/查看实例元数据.md
@@ -23,6 +23,13 @@ keyword: ECS
 
 SSRF（Server-Side Request Forgery）是指攻击者利用服务器漏洞，篡改获取资源的请求发给服务端，进而利用服务端访问其所在内网资源的攻击方式。由于查看实例元数据时，服务端通过URL方式分享数据内容，因此可能被恶意篡改用于攻击从外网无法访问的内部系统。加固模式下，实例基于token鉴权查看实例元数据，相比普通模式对SSRF攻击有更好的防范效果。在自建网络防火墙应用、自建反向代理应用、自建提供转码下载服务的Web应用等场景中，建议您利用加固模式查看实例元数据，防范SSRF攻击，提高应用安全性。
 
+您需要在创建实例时指定实例元数据访问模式：
+
+-   **普通模式（兼容加固模式）**：实例创建完成后，支持通过普通模式或者加固模式查看实例元数据。
+-   **仅加固模式**：实例创建完成后，仅支持通过加固模式查看实例元数据。
+
+![metadata-mode](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6081334261/p285910.png)
+
 ## 查看实例元数据（普通模式）
 
 在Linux实例中查看实例元数据的Shell命令示例如下所示：
