--- a/intl.zh-CN/运维与监控/云助手/使用云助手/删除命令.md
+++ b/intl.zh-CN/运维与监控/云助手/使用云助手/删除命令.md
@@ -10,17 +10,14 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
 
 1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
 
-2.  在左侧导航栏，单击**运维与监控** \> **发送命令/文件（云助手）**。
+2.  在左侧导航栏，选择**运维与监控** \> **发送命令/文件（云助手）**。
 
 3.  在顶部菜单栏左上角处，选择地域。
 
 4.  找到需要删除的云助手命令，选择删除方式。
 
     -   删除一条命令：在右侧**操作**列表中，单击**删除**。
-    -   删除多条命令：选中目标实例，单击**删除命令**。
-
-        ![删除多条命令](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8597919951/p8634.png)
-
+    -   删除多条命令：选中目标实例，单击底部的**删除命令**。
 5.  在**删除命令**对话框中，单击**确定**。
 
 
