--- a/cn.zh-CN/运维与监控/云助手/使用云助手/克隆命令.md
+++ b/cn.zh-CN/运维与监控/云助手/使用云助手/克隆命令.md
@@ -1,26 +1,36 @@
-# 克隆命令 {#task_1958289 .task}
+---
+keyword: [克隆云助手命令, 运维, 复制云助手命令]
+---
 
-创建了云助手命令后，建议您合理管理自己的命令资源。本文介绍如何克隆命令。
+# 克隆命令
 
 克隆命令相当于为一份云助手命令新增版本。您可以完全保留被克隆的命令的所有信息，也可以修改命令的名称、描述、类型、内容、执行路径或者超时时间。
 
 1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
-2.  在左侧导航栏，单击**运维与监控** \> **云助手**。
-3.  在顶部状态栏处，选择地域。
-4.  找到需要克隆的云助手命令，在右侧**操作**列表中单击**克隆**。
-5.  在克隆命令对话框中，您可以完成以下可选步骤： 
-    1.  输入新的**命令名称**，如HelloECS。
-    2.  输入新的**命令描述**，如UserGuide。
-    3.  在**命令类型**的下拉列表中选择命令类型。
-        -   Windows实例可以选择**Bat**或者**Power Shell**。
-        -   Linux实例需要选择**Shell**。
-    4.  编辑或者粘贴新的**命令内容**。
-    5.  确定命令的**执行路径**。
-        -   Bat或者PowerShell命令默认在云助手客户端进程所在目录，例如，C:\\ProgramData\\aliyun\\assist\\$\(version\)。
-        -   Shell命令默认在/root目录。
-    6.  设置命令在实例中的最大的**超时时间**，单位为秒，默认为3600。
 
-        当因为某种原因无法运行您创建的命令时，会出现超时现象。超时后，会强制终止命令进程。
+2.  在左侧导航栏，选择**运维与监控** \> **发送命令/文件（云助手）**。
 
-6.  确认修改后，单击**创建**。
+3.  在顶部菜单栏左上角处，选择地域。
+
+4.  找到需要克隆的云助手命令，在右侧**操作**列表中，单击**克隆**。
+
+5.  在**克隆命令**对话框中，完成以下配置。
+
+    |名称|描述|
+    |--|--|
+    |命令名称|设置命令名称。|
+    |执行计划|选择命令执行时间。     -   **立即执行**：单击**执行**或**执行并保存**后，立即执行命令。
+    -   **系统下一次启动后**：单击**执行**或**执行并保存**后，实例下次启动时执行命令。
+    -   **系统每次启动后**：单击**执行**或**执行并保存**后，实例每次启动时执行命令。 |
+    |命令类型|选择命令类型。     -   Linux：选择**Shell**。
+    -   Windows：选择**Bat**或者**Power Shell**。 |
+    |命令内容|编辑或者粘贴您的命令。 有关Shell命令的示例，请参见[查看实例系统配置](/cn.zh-CN/运维与监控/云助手/DevOps自动化运维实践/查看实例系统配置.md)。 |
+    |使用参数|选择是否启用参数。 如果您开启了**使用参数**功能，在**命令内容**中以`{{key}}`格式设置自定义参数。 |
+    |命令描述|设置命令的描述信息。建议设置命令用途等信息，方便后续管理维护。|
+    |执行路径|自定义命令的执行路径。默认路径如下：     -   Linux：默认在root用户的/home目录。
+    -   Windows：默认在云助手客户端进程目录，例如，C:\\ProgramData\\aliyun\\assist\\$\(version\)。 |
+    |超时时间|设置命令在实例中的**超时时间**，当执行命令的任务超时后，云助手将强制终止任务进程。 单位为秒，默认为60秒，最小为10秒。如果您设置的**超时时间**小于10秒，为确保命令执行成功，会被系统设置为10秒。 |
+
+6.  确认修改后，单击**克隆**。
+
 
