--- a/intl.zh-CN/运维与监控/云助手/使用云助手/克隆命令.md
+++ b/intl.zh-CN/运维与监控/云助手/使用云助手/克隆命令.md
@@ -1,5 +1,5 @@
 ---
-keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
+keyword: [克隆云助手命令, 运维, 复制云助手命令]
 ---
 
 # 克隆命令
@@ -8,7 +8,7 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
 
 1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
 
-2.  在左侧导航栏，单击**运维与监控** \> **发送命令/文件（云助手）**。
+2.  在左侧导航栏，选择**运维与监控** \> **发送命令/文件（云助手）**。
 
 3.  在顶部菜单栏左上角处，选择地域。
 
@@ -19,14 +19,17 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
     |名称|描述|
     |--|--|
     |命令名称|设置命令名称。|
-    |命令类型|选择命令类型。    -   Linux：选择**Shell**。
+    |执行计划|选择命令执行时间。     -   **立即执行**：单击**执行**或**执行并保存**后，立即执行命令。
+    -   **系统下一次启动后**：单击**执行**或**执行并保存**后，实例下次启动时执行命令。
+    -   **系统每次启动后**：单击**执行**或**执行并保存**后，实例每次启动时执行命令。 |
+    |命令类型|选择命令类型。     -   Linux：选择**Shell**。
     -   Windows：选择**Bat**或者**Power Shell**。 |
-    |命令内容|编辑或者粘贴您的命令。有关Shell命令的示例，请参见[查看实例系统配置](/intl.zh-CN/运维与监控/云助手/DevOps自动化运维实践/查看实例系统配置.md)。 |
-    |使用参数|选择是否启用参数。如果您开启了**使用参数**功能，在**命令内容**中以`{{key}}`格式设置自定义参数。 |
+    |命令内容|编辑或者粘贴您的命令。 有关Shell命令的示例，请参见[查看实例系统配置](/intl.zh-CN/运维与监控/云助手/DevOps自动化运维实践/查看实例系统配置.md)。 |
+    |使用参数|选择是否启用参数。 如果您开启了**使用参数**功能，在**命令内容**中以`{{key}}`格式设置自定义参数。 |
     |命令描述|设置命令的描述信息。建议设置命令用途等信息，方便后续管理维护。|
-    |执行路径|自定义命令的执行路径。默认路径如下：    -   Linux：默认在root用户的/home目录。
+    |执行路径|自定义命令的执行路径。默认路径如下：     -   Linux：默认在root用户的/home目录。
     -   Windows：默认在云助手客户端进程目录，例如，C:\\ProgramData\\aliyun\\assist\\$\(version\)。 |
-    |超时时间|设置命令在实例中的**超时时间**，当执行命令的任务超时后，云助手将强制终止任务进程。单位为秒，默认为60秒，最小为10秒。如果您设置的**超时时间**小于10秒，为确保命令执行成功，会被系统设置为10秒。 |
+    |超时时间|设置命令在实例中的**超时时间**，当执行命令的任务超时后，云助手将强制终止任务进程。 单位为秒，默认为60秒，最小为10秒。如果您设置的**超时时间**小于10秒，为确保命令执行成功，会被系统设置为10秒。 |
 
 6.  确认修改后，单击**克隆**。
 
