--- a/cn.zh-CN/实例/选择实例规格/突发型/突发性能实例计费.md
+++ b/cn.zh-CN/实例/选择实例规格/突发型/突发性能实例计费.md
@@ -1,67 +1,32 @@
 # 突发性能实例计费
 
-突发性能实例采用CPU积分决定实际运行性能，提高了购买计算能力时的成本可控性。但如果您透支或付费使用CPU积分，可能产生额外费用，因此突发性能实例费用分为实例购买费用和额外费用。
+突发性能实例通过消耗CPU积分来维持运行性能，可以在业务平峰期积累CPU积分余额，用于在业务高峰期提高运行性能，从而节约成本。但如果实例消耗了预支CPU积分或超额CPU积分，可能产生额外费用，因此突发性能实例费用分为实例购买费用和额外费用。
 
 ## 实例购买费用
 
-和其它实例规格族相同，购买突发性能实例时支持按量付费和包年包月。不同计费方式的区别，请参见[计费方式对比](/cn.zh-CN/产品定价/计费方式对比.md)。详细的突发性能实例定价，请参见[详细价格总览](https://www.aliyun.com/price/product#/ecs/detail)。
+购买突发性能实例时支持按量付费、包年包月、抢占式实例等计费方式。不同计费方式的区别，请参见[计费方式概述](/cn.zh-CN/产品计费/计费方式/计费方式概述.md)。详细的实例规格定价，请参见[详细价格总览](https://www.aliyun.com/price/product#/ecs/detail)。
 
-突发性能实例支持抢占式实例，详细信息请参见[抢占式实例概述](/cn.zh-CN/实例/选择实例购买方式/抢占式实例/抢占式实例概述.md)。
-
-如果计费方式为按量付费，您也可以购买预留实例券抵扣按量付费实例的按量账单，详细信息请参见[预留实例券概述](/cn.zh-CN/实例/选择实例购买方式/预留实例券/预留实例券概述.md)。但是，如果预留实例券的实例规格为t5，存在以下限制：
+如果实例计费方式为按量付费，您可以购买预留实例券抵扣实例的按量账单，更多信息，请参见[预留实例券概述](/cn.zh-CN/实例/选择实例购买方式/预留实例券/预留实例券概述.md)。但是，如果预留实例券的实例规格为t5，存在以下限制：
 
 -   仅支持购买可用区级预留实例券。
 -   购买后不支持拆分和合并预留实例券。
 
-## 性能模式对计费的影响
+## 性能模式对计费的影响（额外费用）
 
-购买或使用突发性能实例时，您可以选择是否打开无性能约束模式。性能模式会影响实例计费，具体如下：
+购买或使用突发性能实例时，您可以选择是否打开无性能约束模式，关于无性能约束模式下CPU积分的消耗规则，请参见[无性能约束模式](/cn.zh-CN/实例/选择实例规格/突发型/突发性能实例概述.md)。
+
+性能模式会影响实例计费，规则如下：
 
 -   性能约束模式：仅需支付实例购买费用，使用实例时不产生额外费用。
--   无性能约束模式：在支付实例购买费用的基础上，可能还需要支付额外费用。
+-   无性能约束模式：在支付实例购买费用的基础上，部分情况下还需要支付额外费用。
+    -   预支CPU积分消耗完毕后，继续消耗了超额CPU积分。超额CPU积分按小时出账单并收取费用。
+    -   消耗了预支CPU积分，并在预支CPU积分恢复完毕前切换为性能约束模式，则一次性收取预支的CPU积分的费用，CPU积分余额保持不变。
+    -   消耗了预支CPU积分，并在预支CPU积分恢复完毕前停止（开启了停机不收费）、变配或释放实例，则一次性收取预支的CPU积分的费用。
 
-    以下情况需要支付额外费用：
-
-    -   预支CPU积分使用完毕后，继续使用了超额CPU积分。超额CPU积分按小时出账单并收取费用。
-    -   使用了预支CPU积分，并在预支CPU积分恢复完毕前切换为性能约束模式，则一次性收取预支的CPU积分的费用，CPU积分余额保持不变。
-    -   使用了预支CPU积分，并在预支CPU积分恢复完毕前停止或释放实例，则一次性收取预支的CPU积分的费用。停止实例对CPU积分的影响请参见[CPU积分](/cn.zh-CN/实例/选择实例规格/突发型/突发性能实例概述.md)。
-    **说明：** 无性能约束模式下，CPU积分的消耗规则请参见[无性能约束模式](/cn.zh-CN/实例/选择实例规格/突发型/突发性能实例概述.md)。
-
-
-在无性能约束模式下，额外费用的收取标准如下表所示：
+在无性能约束模式下，额外费用的收取标准如下表所示。
 
 |地域|Windows实例（元/积分）|Linux实例（元/积分）|
 |:-|:--------------|:------------|
 |中国内地地域|0.005|0.005|
 |非中国内地地域|0.01|0.005|
-
-## 突发性能实例和企业级实例成本对比
-
-仅在打开无性能约束模式后才可以使用超额CPU积分。如果突发性能实例使用了超额CPU积分，您需要额外付费。当使用的超额CPU积分达到一定数量，使用突发实例性能实例的总费用会赶上甚至超过同等配置的企业级实例。详情请参见[无性能约束模式](/cn.zh-CN/实例/选择实例规格/突发型/突发性能实例概述.md)。
-
-**说明：** 本示例中使用2019年4月30日的价格，仅为示例，最新价格请参见[详细价格总览](https://www.aliyun.com/price/product#/ecs/detail)。
-
-以突发性能实例ecs.t5-lc1m2.large与企业级实例ecs.c5.large为例，两款实例均是2vCPU 4GiB。假设ecs.t5-lc1m2.large实例的初始CPU积分、CPU积分余额和预支CPU积分已消耗完毕，则使用超额CPU积分时的成本变化趋势如下图所示。
-
-![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4504359951/p46093.png)
-
-图中按量付费小时价格根据ecs.t5-lc1m2.large配置（基准性能10%、2 vCPU）和超额CPU积分价格（华北2地域、Linux实例）计算得出，供您了解成本变化趋势。条件变化时计算方式相同，但具体临界值存在差异。
-
-可以看到，在使用配置为2vCPU 4GiB的实例时，如果突发性能实例已经开始消耗超额CPU积分：
-
--   平均CPU使用率小于57.83%，则选用突发性能实例ecs.t5-lc1m2.large的成本更低。
--   平均CPU使用率等于57.83%，则选用突发性能实例ecs.t5-lc1m2.large和企业级实例ecs.c5.large的成本相同。
--   平均CPU使用率大于57.83%，则选用企业级实例ecs.c5.large的成本更低。
-
-因此，如果您能准确预估性能需求，请根据CPU使用率临界值选购实例类型，从而在控制成本的同时保证业务正常运行。
-
-下面列出几款热销突发性能实例规格的成本变化趋势。如需了解其它规格，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex) 。
-
-![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4504359951/p45519.png)
-
-![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4504359951/p46092.png)
-
-![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4504359951/p46095.png)
-
-![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4504359951/p46096.png)
 
