--- a/cn.zh-CN/运维与监控/实例健康诊断/诊断项与诊断结果说明.md
+++ b/cn.zh-CN/运维与监控/实例健康诊断/诊断项与诊断结果说明.md
@@ -22,7 +22,7 @@
 
 |诊断项（控制台）|诊断项（API）|描述|诊断范围|
 |--------|--------|--|----|
-|实例申请资源异常|Instance.ResourceNotEnough|因CPU或内存资源不足，导致实例无法正常启动。|检查该实例所需要的CPU或内存等物理资源是否充足。如果因为库存不足使得物理资源不足，将导致实例无法启动。您可以等待几分钟后重新尝试开机，或者更换地域或可用区重新开机。|
+|实例申请资源异常|Instance.ResourceNotEnough|因CPU或内存资源不足，导致实例无法正常启动。|检查该实例所需要的CPU或内存等物理资源是否充足。如果因为库存不足使得物理资源不足，将导致实例无法启动。您可以等待几分钟后重新尝试开机，或者在其他地域或可用区尝试重新创建实例。|
 |实例系统检查超时|Instance.CheckTimeOut|实例系统管控通道检查超时。|检查该实例底层虚拟化层相关组件的状态是否存在超时现象。如果超时，可能会导致实例当前命令执行失败。您需要重新尝试该命令。|
 |实例系统异常|Instance.SystemException|实例系统出现了内核错误（kernel panic）、OOM异常或内部宕机等故障。|检查该实例的操作系统Guest OS内部是否存在内核panic、OOM异常或内部宕机等故障。这些故障可能是由于Guest OS内的用户程序或实例配置不当而导致，您可以尝试通过重启实例进行恢复。|
 |实例虚拟化异常|Instance.VirtException|实例在运行中出现崩溃或出现异常暂停。|检查该实例底层虚拟化层核心服务是否出现异常。如果出现异常可能会导致实例崩溃或出现异常暂停。您可以尝试通过重启实例进行恢复。|
