--- a/intl.zh-CN/建站教程/建站零基础入门.md
+++ b/intl.zh-CN/建站教程/建站零基础入门.md
@@ -16,18 +16,21 @@
     -   计算型实例规格族c6或通用型实例规格族g6：高性能，适用于比较依赖服务器性能的建站需求。
 了解实例规格族与如何选型，请参见[实例规格族](/intl.zh-CN/实例/实例规格族.md)与[选型最佳实践](/intl.zh-CN/最佳实践/选型最佳实践.md)。
 
-您可以根据业务进展产生的不同需求，对实例做相应的升降配调整。详情请参见[支持变配的实例规格](/intl.zh-CN/实例/升降配实例/修改实例规格/支持变配的实例规格.md)。 |
-    |云盘|    -   ESSD云盘PL0：基于新一代分布式块存储架构的超高性能云盘产品。详情请参见[ESSD云盘](/intl.zh-CN/块存储/块存储介绍/ESSD云盘.md)。
+您可以根据业务进展产生的不同需求，对实例做相应的升降配调整。更多信息，请参见[支持变配的实例规格](/intl.zh-CN/实例/升降配实例/支持变配的实例规格.md)。 |
+    |云盘|    -   ESSD云盘PL0：基于新一代分布式块存储架构的超高性能云盘产品。更多信息，请参见[ESSD云盘](/intl.zh-CN/块存储/块存储介绍/ESSD云盘.md)。
     -   高效云盘：高性价比、中等随机读写性能、高可靠性的云盘产品。
-云盘的性能衡量指标以及性能规格请参见[块存储性能](/intl.zh-CN/块存储/性能/块存储性能.md)。 |
+云盘的性能衡量指标以及性能规格，请参见[块存储性能](/intl.zh-CN/块存储/性能/块存储性能.md)。 |
 
-    云服务器ECS主要计费方式为包年包月和和按量付费，详情请参见[计费概述](/intl.zh-CN/产品定价/计费概述.md)。了解不同配置的价格，请参见[ECS定价页面](https://www.alibabacloud.com/product/ecs?tab=pricing)。
+    云服务器ECS主要计费方式为包年包月和和按量付费。更多信息，请参见[计费概述](/intl.zh-CN/产品计费/计费概述.md)。了解不同配置的价格，请参见[ECS定价页面](https://www.alibabacloud.com/product/ecs?tab=pricing)。
 
 2.  配置安全组规则。
 
-    远程连接实例所需的22、3389端口在创建安全组时默认为开启状态，您需要确认安全组的入方向已开放这些端口。如果未开放，请手动配置，具体操作请参见[添加安全组规则](/intl.zh-CN/安全/安全组/添加安全组规则.md)。
+    远程连接实例所需的22、3389端口在创建安全组时默认为开启状态，您需要确认安全组的入方向已开放这些端口。如果未开放，请手动配置。具体操作，请参见[添加安全组规则](/intl.zh-CN/安全/安全组/添加安全组规则.md)。
 
 3.  部署网站。
+
+    选择网站的部署方式。具体部署方式，请参见[自助建站方式汇总](/intl.zh-CN/建站教程/自助建站方式汇总.md)。
+
 4.  购买域名。
 
     输入想要的域名，未被占用即可购买。具体操作，请参见[注册通用域名](/intl.zh-CN/域名注册/注册通用域名.md)。
@@ -40,14 +43,18 @@
 
     1.  准备备案。
 
-        各省管局要求资料有所不同，请根据[各地区管局备案规则]()准备资料。
+        各省管局要求资料有所不同，请根据[各地区管局备案规则]()准备资料。更多信息，请参见[ICP备案前准备概述]()。
 
     2.  备案。
 6.  解析域名。
 
-    解析域名的具体步骤，请参见[设置域名解析快速入门](https://www.alibabacloud.com/help/faq-detail/58131.htm)。设置域名解析后，外部用户可通过域名访问网站。
+    解析域名的具体操作，请参见[设置域名解析快速入门](https://www.alibabacloud.com/help/faq-detail/58131.htm)。设置域名解析后，外部用户可通过域名访问网站。
 
-    如需将域名指向一个IP地址，添加A记录即可。详情请参见[记录类型](https://www.alibabacloud.com/help/faq-detail/58077.htm)。
+    如需将域名指向一个IP地址，添加A记录即可。具体操作，请参见[记录类型](https://www.alibabacloud.com/help/faq-detail/58077.htm)。
+
+7.  （可选）开启HTTPS加密访问。
+
+    SSL证书服务帮助您以最小的成本将服务从HTTP转换成HTTPS，实现网站或移动应用的身份验证和数据加密传输。更多信息，请参见[什么是SSL证书服务](/intl.zh-CN/产品简介/什么是SSL证书服务.md)。如果您已经选购并下载了SSL证书，不同环境的服务器部署方式也不同。具体操作，请参见[SSL证书安装指南](/intl.zh-CN/证书安装/SSL证书安装指南.md)。
 
 
 至此，自助建站操作已完成。接下来，您可以使用域名访问网站，测试服务是否正常。
