--- a/cn.zh-CN/实例/实例规格族.md
+++ b/cn.zh-CN/实例/实例规格族.md
@@ -1542,6 +1542,8 @@ re6包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
+|ecs.re6.4xlarge|16|256|5|90万|8|7|20|2.5万|2|
+|ecs.re6.8xlarge|32|512|10|180万|16|7|20|5万|4|
 |ecs.re6.13xlarge|52|768|10|180万|16|7|20|5万|4|
 |ecs.re6.26xlarge|104|1536|16|300万|32|7|20|10万|8|
 |ecs.re6.52xlarge|208|3072|32|600万|32|15|20|20万|16|
@@ -2658,7 +2660,7 @@ vgn6i的特点如下：
 
 -   如果您需要vgn6i实例支持OpenGL图形显示等图形功能，请使用NVIDIA vGPU相关软件，软件License的获取方式和实例规格、实例镜像类型有关：
     -   ecs.vgn6i-m4-vws.xlarge和ecs.vgn6i-m8-vws.2xlarge：已包含NVIDIA Quadro vWS的软件License，您可以使用任意镜像类型。
-    -   其他vgn6i实例（Windows镜像）：创建实例时在镜像市场中搜索关键词GRID，并选用预装GRID驱动的收费镜像。这些收费镜像带有已经激活License的GRID驱动，不用再手动安装GRID驱动。关于如何选择镜像市场镜像，请参见[创建配备NVIDIA GPU的实例]()。
+    -   其他vgn6i实例（Windows镜像）：创建实例时在镜像市场中搜索关键词GRID，并选用预装GRID驱动的收费镜像。这些收费镜像带有已经激活License的GRID驱动，不用再手动安装GRID驱动。关于如何选择镜像市场镜像，请参见[创建GPU实例]()。
     -   其他vgn6i实例（Linux镜像）：请自行向[NVIDIA](https://www.nvidia.com/object/nvidia-enterprise-account.html)购买GRID License，并在创建实例后手动安装GRID驱动和激活License。关于如何安装GRID驱动，请参见[在GPU虚拟化型实例中安装GRID驱动（Linux）](/cn.zh-CN/实例/选择实例规格/GPU计算型/在vgn6i和vgn5i实例中安装GRID驱动（Linux）.md)。
 -   计算：
     -   采用NVIDIA T4 GPU计算加速器
@@ -2933,7 +2935,7 @@ ebman1包括的实例规格及指标数据如下表所示。
 vgn5i的特点如下：
 
 -   如果您需要vgn5i实例支持OpenGL图形显示等图形功能，请使用NVIDIA vGPU相关软件，软件License的获取方式和实例镜像类型有关：
-    -   vgn5i实例（Windows镜像）：创建实例时在镜像市场中搜索关键词GRID，并选用预装GRID驱动的收费镜像。这些收费镜像带有已经激活License的GRID驱动，不用再手动安装GRID驱动。关于如何选择镜像市场镜像，请参见[创建配备NVIDIA GPU的实例]()。
+    -   vgn5i实例（Windows镜像）：创建实例时在镜像市场中搜索关键词GRID，并选用预装GRID驱动的收费镜像。这些收费镜像带有已经激活License的GRID驱动，不用再手动安装GRID驱动。关于如何选择镜像市场镜像，请参见[创建GPU实例]()。
     -   vgn5i实例（Linux镜像）：请自行向[NVIDIA](https://www.nvidia.com/object/nvidia-enterprise-account.html)购买GRID License，并在创建实例后手动安装GRID驱动和激活License。关于如何安装GRID驱动，请参见[在GPU虚拟化型实例中安装GRID驱动（Linux）](/cn.zh-CN/实例/选择实例规格/GPU计算型/在vgn6i和vgn5i实例中安装GRID驱动（Linux）.md)。
 -   计算：
     -   采用NVIDIA P4 GPU计算加速器
