--- a/intl.zh-CN/实例/选择实例规格/内存型/内存型.md
+++ b/intl.zh-CN/实例/选择实例规格/内存型/内存型.md
@@ -396,6 +396,8 @@ re6包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
+|ecs.re6.4xlarge|16|256|5|90万|8|7|20|2.5万|2|
+|ecs.re6.8xlarge|32|512|10|180万|16|7|20|5万|4|
 |ecs.re6.13xlarge|52|768|10|180万|16|7|20|5万|4|
 |ecs.re6.26xlarge|104|1536|16|300万|32|7|20|10万|8|
 |ecs.re6.52xlarge|208|3072|32|600万|32|15|20|20万|16|
