--- a/cn.zh-CN/快照/快照概述.md
+++ b/cn.zh-CN/快照/快照概述.md
@@ -1,5 +1,5 @@
 ---
-keyword: [阿里云, 备份, 数据备份, 回滚, 灾备]
+keyword: [备份, 数据备份, 回滚, 灾备, 运维]
 ---
 
 # 快照概述
@@ -16,25 +16,25 @@ keyword: [阿里云, 备份, 数据备份, 回滚, 灾备]
 
 |功能|说明|参考文档|
 |--|--|----|
-|创建快照|支持以下创建快照方式：-   手动快照：由您手动创建，作为重大操作的准备工作，提高操作容错率。
+|创建快照|支持以下创建快照方式：-   手动快照：由您手动创建，作为重大操作的准备工作，提高操作容错率。支持创建单个云盘快照或者实例快照（同实例上多个云盘的快照）。
 -   自动快照：将自动快照策略应用到云盘上，在您设置的时间点自动为云盘创建的快照。通过自动备份云盘数据，提高业务数据安全性。
 
 |-   [创建一个云盘快照](/cn.zh-CN/快照/使用快照/创建一个云盘快照.md)
+-   [创建多个云盘快照（实例快照）](/cn.zh-CN/快照/使用实例快照/创建多个云盘快照（实例快照）.md)
 -   [自动快照策略概述](/cn.zh-CN/快照/使用自动快照策略/自动快照策略概述.md) |
 |回滚云盘|发生系统故障或错误操作时，您可以使用快照回滚云盘，实现应用版本回退。|[使用快照回滚云盘](/cn.zh-CN/快照/使用快照/使用快照回滚云盘.md)|
 |使用系统盘快照创建镜像|通过快照创建自定义镜像，您可以将一台ECS实例的操作系统、数据制作成环境副本，再通过自定义镜像创建多台ECS实例，快速复制应用环境。|[使用快照创建自定义镜像](/cn.zh-CN/镜像/自定义镜像/创建自定义镜像/使用快照创建自定义镜像.md)|
 |使用快照创建云盘|通过快照创建云盘，您可以快速复制云盘。|[使用快照创建云盘](/cn.zh-CN/块存储/云盘基础操作/创建云盘/使用快照创建云盘.md)|
 |复制快照到其他地域|快照从一个地域复制到另一个地域，另一个地域将创建一个快照副本。|[复制快照](/cn.zh-CN/快照/使用快照/复制快照.md)|
 
-除此之外，快照还支持快照极速可用等高级功能。更多信息，请参见[开启或关闭快照极速可用功能](/cn.zh-CN/快照/使用快照/开启或关闭快照极速可用功能.md)。
+除此之外，快照还支持以下高级功能：
 
-除此之外，快照还支持快照极速可用和实例快照等高级功能。更多信息，请参见[开启或关闭快照极速可用功能](/cn.zh-CN/快照/使用快照/开启或关闭快照极速可用功能.md)和[创建多个云盘快照（实例快照）]()。
+-   快照极速可用：启用快照极速可用功能后，即使快照还没有创建完成，您也可以回滚云盘或者创建云盘。更多信息，请参见[开启或关闭快照极速可用功能](/cn.zh-CN/快照/使用快照/开启或关闭快照极速可用功能.md)。
+-   应用一致性快照：启用应用一致性快照功能后，当您使用快照进行回滚，可确保应用处于一致性的启动状态。更多信息，请参见[开启应用一致性快照功能](/cn.zh-CN/快照/使用实例快照/开启应用一致性快照功能.md)。
 
 ## 计费
 
-快照计费项为快照的容量，支持按量付费计费方式。更多详情，请参见[快照计费](/cn.zh-CN/产品定价/计费项/快照计费.md)。
-
-**说明：** 快照按量付费账单支持通过OSS存储包或存储容量单位包抵扣。
+快照的计费信息，请参见[快照计费](/cn.zh-CN/产品计费/计费项/快照计费.md)。
 
 ## 使用限制
 
