--- a/intl.zh-CN/镜像/公共镜像/公共镜像发布记录.md
+++ b/intl.zh-CN/镜像/公共镜像/公共镜像发布记录.md
@@ -501,6 +501,19 @@ keyword: [release note, 发布更新, ecs, linux, windows]
     -   更新最新补丁包
     -   修复CVE-2021-3156漏洞 |
 
+## UEFI镜像
+
+UEFI镜像仅适用的实例规格族：ecs.g7、ecs.r7、ecs.c7、ecs.g7t、ecs.r7t、ecs.c7t。
+
+|版本|镜像ID|发布时间|发布内容|
+|:-|----|----|:---|
+|CentOS 8.4|centos\_8\_4\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|发布CentOS 8.4 UEFI版镜像|
+|CentOS 8.3|centos\_8\_3\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|发布CentOS 8.3 UEFI版镜像|
+|Ubuntu 20.04|ubuntu\_20\_04\_uefi\_x64\_20G\_alibase\_20210609.vhd|2021-06-09|-   发布Ubuntu 20.04 UEFI版镜像
+-   适用地域：华北2（北京）、华东1（杭州）、华东2（上海）、西南1（成都）、中国（香港）、新加坡 |
+|Ubuntu 18.04|ubuntu\_18\_04\_uefi\_x64\_20G\_alibase\_20210609.vhd|2021-06-09|-   发布Ubuntu 18.04 UEFI版镜像
+-   适用地域：华北2（北京）、华东1（杭州）、华东2（上海）、西南1（成都）、中国（香港）、新加坡 |
+
 ## 可信镜像
 
 可信镜像仅适用于以下实例规格族和专有宿主机规格：
