--- a/intl.zh-CN/产品计费/计费方式/按量付费.md
+++ b/intl.zh-CN/产品计费/计费方式/按量付费.md
@@ -58,21 +58,23 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 
 |资源类型|计费周期|计费公式|资源单价|
 |----|----|----|----|
-|计算资源（vCPU和内存）|秒|实例规格单价 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**实例规格价格**。 **说明：** 本地盘与特定规格的实例相绑定，费用已计入实例规格单价。 |
-|镜像|秒|镜像单价 \* 计费时长|以售卖页和镜像市场显示的价格为准。|
-|云盘（系统盘）|秒|云盘单价 \* 云盘容量 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**存储价格** \> **系统盘****说明：** 页面中标出的按量价格为USD/100GiB/小时\)，将其除以100，即得到每GiB的单价。 |
-|云盘（数据盘）|秒|云盘单价 \* 云盘容量 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**存储价格** \> **数据盘**。 **说明：** 页面中标出的按量价格为USD/100GiB/小时\)，将其除以100，即得到每GiB的单价。 |
-|公网带宽（按固定带宽）|秒|固定带宽单价 \* 固定带宽大小 \* 计费时长 更多公网带宽计费说明，请参见[公网带宽计费](/intl.zh-CN/产品计费/计费项/公网带宽计费.md)。
+|计算资源（vCPU和内存）|和实例规格的vCPU数量有关：-   1 vCPU：计费周期为10分钟，不足10分钟则按10分钟计算。
+-   2 vCPU：计费周期为5分钟，不足5分钟则按5分钟计算。
+-   4 vCPU：计费周期为2分钟，不足2分钟则按2分钟计算。
+-   4 vCPU以上：计费周期为1秒。
+
+|实例规格单价 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**实例规格价格**。 **说明：** 本地盘与特定规格的实例相绑定，费用已计入实例规格单价。 |
+|镜像|1秒|镜像单价 \* 计费时长|以售卖页和镜像市场显示的价格为准。|
+|云盘（系统盘）|1秒|云盘单价 \* 云盘容量 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**存储价格** \> **系统盘****说明：** 页面中标出的按量价格为USD/100GiB/小时\)，将其除以100，即得到每GiB的单价。 |
+|云盘（数据盘）|1秒|云盘单价 \* 云盘容量 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**存储价格** \> **数据盘**。 **说明：** 页面中标出的按量价格为USD/100GiB/小时\)，将其除以100，即得到每GiB的单价。 |
+|公网带宽（按固定带宽）|1秒|固定带宽单价 \* 固定带宽大小 \* 计费时长 更多公网带宽计费说明，请参见[公网带宽计费](/intl.zh-CN/产品计费/计费项/公网带宽计费.md)。
 
 |固定带宽阶梯计费，请在售卖页选择带宽值后查看配置费用的变化。|
-|快照|小时|快照单价 \* 快照容量 \* 计费时长 更多快照计费说明，请参见[快照计费](/intl.zh-CN/产品计费/计费项/快照计费.md)。
+|快照|计费周期为1小时，不足1小时则按1小时计算。|快照单价 \* 快照容量 \* 计费时长 更多快照计费说明，请参见[快照计费](/intl.zh-CN/产品计费/计费项/快照计费.md)。
 
 |请参见[云服务器ECS产品详情页](https://www.alibabacloud.com/product/ecs)**快照服务费用细则**。|
 
-**说明：**
-
--   计费周期为秒表示每次计入1秒的费用。如果计费精确到秒的资源标出了每小时价格，您可以将每小时价格除以3600，即得到每秒价格。
--   计费周期为小时表示每次计入1小时的费用。如果使用时长不足1小时，按1小时计算。
+**说明：** 计费周期为1秒表示每次计入1秒的费用。如果计费精确到1秒的资源标出了每小时价格，您可以将每小时价格除以3600，即得到每秒价格。
 
 例如，您在华北1（青岛）地域下创建了一台按量付费实例，使用时段为2019年8月8日11:00:00至12:00:00。下图给出了示例配置的费用计算过程。
 
@@ -105,7 +107,7 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 
 **说明：** 如果按量付费实例在整个生命周期内计费不足0.01 USD，将补齐按照0.01 USD收取。
 
-建议您为按量付费实例开启自动释放功能，避免超出预期开通时长产生不必要的费用。如果设置了自动释放，计费结束时间以资源的实际释放时间为准，精确到秒。
+建议您为按量付费实例开启自动释放功能，避免超出预期开通时长产生不必要的费用。如果设置了自动释放，计费结束时间以资源的实际释放时间为准，精确到1秒。
 
 ## 结算周期
 
