--- a/cn.zh-CN/实例/管理实例/使用实例元数据/使用实例标识.md
+++ b/cn.zh-CN/实例/管理实例/使用实例元数据/使用实例标识.md
@@ -11,15 +11,14 @@
 |属性|描述|能否变更|
 |:-|:-|:---|
 |account-id|实例所属用户账号ID|否|
-|create-time|实例创建时间|否|
 |instance-id|实例ID|否|
 |mac|实例主网卡MAC地址|否|
 |region-id|实例所属的地域ID|否|
 |serial-number|实例的序列号|否|
 |zone-id|实例所属可用区ID|否|
-|instance-type|实例规格|实例变更实例规格后会发生变化。 例如：[升降配](/cn.zh-CN/实例/升降配实例/升降配方式概述.md) |
-|image-id|实例使用的镜像ID|实例更换系统盘后会发生变化。 例如：[更换系统盘（公共镜像）](/cn.zh-CN/块存储/云盘基础操作/更换系统盘/更换系统盘（公共镜像）.md) |
-|private-ip|实例的私网IP地址|VPC类型实例修改私网IP地址后会发生变化。 例如：[修改私有IP地址](/cn.zh-CN/网络/修改IPv4地址/修改私有IP地址.md) |
+|instance-type|实例规格|实例变更实例规格后会发生变化。例如：[升降配](/cn.zh-CN/实例/升降配实例/升降配方式概述.md) |
+|image-id|实例使用的镜像ID|实例更换系统盘后会发生变化。例如：[更换系统盘（公共镜像）](/cn.zh-CN/块存储/云盘基础操作/更换系统盘/更换系统盘（公共镜像）.md) |
+|private-ip|实例的私网IP地址|VPC类型实例修改私网IP地址后会发生变化。例如：[修改私有IP地址](/cn.zh-CN/网络/修改IPv4地址/修改私有IP地址.md) |
 
 实例标识签名采用[PKCS\#7](https://tools.ietf.org/html/rfc2315)格式加密，纯数字化，安全可靠。
 
@@ -29,7 +28,7 @@
 
 在以下场景中，您可以借助实例标识（`instance-identity`）实现鉴权、授权或者判断运行环境等目的：
 
--   传统的线下手动激活的软件授权是一码单用，但由于云上软件的使用时间及场景多变，您可以在上架[云市场](https://market.aliyun.com/)[云市场](https://marketplace.alibabacloud.com/)[云市场](https://partners-intl.aliyun.com/marketplace/vodafone/)应用软件时使用实例标识灵活地完成用户授权。更多详情，请参见[示例一：不传入audience参数](#section_9ke_h6k_kfi)。
+-   传统的线下手动激活的软件授权是一码单用，但由于云上软件的使用时间及场景多变，您可以在上架[云市场](https://market.aliyun.com/)应用软件时使用实例标识灵活地完成用户授权。更多详情，请参见[示例一：不传入audience参数](#section_9ke_h6k_kfi)。
 -   当您在ECS实例中写入敏感数据时，您可以使用实例标识确保当前所写入的位置是您的ECS实例而不是其他环境。
 -   其他需要确认目标服务器来源的场景。
 
@@ -108,9 +107,9 @@
 
 1.  进入ECS实例环境。
 
-2.  确认当前ECS实例使用的镜像是否来自于[镜像市场](https://market.aliyun.com/products/53448001)[镜像市场](https://marketplace.alibabacloud.com/products/56732001)[镜像市场](https://partners-intl.aliyun.com/marketplace/vodafone/)。
+2.  确认当前ECS实例使用的镜像是否来自于[镜像市场](https://market.aliyun.com/products/53448001)。
 
-    具体可以通过Metadata中的product-code项（镜像市场镜像的商品码）和charge-type项（镜像市场镜像的计费方式）。更多详情，请参见[实例元数据概述](/cn.zh-CN/实例/管理实例/使用实例元数据/实例元数据概述.md)。
+    具体可以通过Metadata中的product-code项（镜像市场镜像的商品码）和charge-type项（镜像市场镜像的计费方式）。更多详情，请参见[ECS实例元数据概述](/cn.zh-CN/实例/管理实例/使用实例元数据/ECS实例元数据概述.md)。
 
     ```
     curl http://100.100.100.200/latest/meta-data/image/market-place/product-code
@@ -145,7 +144,7 @@
 
 1.  进入ECS实例环境。
 
-2.  确认当前ECS实例使用的镜像是否来自于[镜像市场](https://market.aliyun.com/products/53448001)[镜像市场](https://marketplace.alibabacloud.com/products/56732001)[镜像市场](https://partners-intl.aliyun.com/marketplace/vodafone/)。
+2.  确认当前ECS实例使用的镜像是否来自于[镜像市场](https://market.aliyun.com/products/53448001)。
 
     具体可以通过Metadata中的product-code项（镜像市场镜像的商品码）和charge-type项（镜像市场镜像的计费方式）。
 
