--- a/cn.zh-CN/运维与监控/事件通知/事件通知列表/实例事件通知.md
+++ b/cn.zh-CN/运维与监控/事件通知/事件通知列表/实例事件通知.md
@@ -91,7 +91,7 @@ content字段解释：
 
 ## 生命周期状态变化
 
-实例的状态发生改变时，云服务器ECS会发出实例状态改变事件。有关实例状态变化的更多详情，请参见[实例生命周期介绍](/cn.zh-CN/实例/实例生命周期介绍.md)。
+实例的状态发生改变时，云服务器ECS会发出实例状态改变事件。有关实例状态变化的更多详情，请参见[实例生命周期](/cn.zh-CN/实例/实例生命周期.md)。
 
 以**运行中**（Running）的状态变化为例，事件通知的格式如下所示。
 
@@ -120,8 +120,7 @@ content字段解释：
 |--|--|---|
 |resourceId|实例ID。|i-bp1ecr\*\*\*\*\*\*\*\*5go2go|
 |resourceType|资源类型。取值范围：ALIYUN::ECS::Instance。|ALIYUN::ECS::Instance|
-|state|实例状态。取值范围： -   Pending：准备中。
--   Created：创建完成。该状态的事件通知仅在实例创建完成后发送一次。
+|state|实例状态。取值范围： -   Created：创建完成。该状态的事件通知仅在实例创建完成后发送一次。
 -   Starting：启动中。
 -   Running：运行中。
 -   Stopping：停止中或重启中。
