--- a/intl.zh-CN/镜像/Alibaba Cloud Linux 2/Alibaba Cloud Linux 2支持内核热补丁/内核热补丁操作说明.md
+++ b/intl.zh-CN/镜像/Alibaba Cloud Linux 2/Alibaba Cloud Linux 2支持内核热补丁/内核热补丁操作说明.md
@@ -42,7 +42,7 @@
 
         ![rpm包信息](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6006254261/p287069.png)
 
-        补丁RPM包的格式为`kernel-hotfix-\{hotfix\_id\}-\{操作系统子版本号\}-\{hotfix版本号\}-\{hotfix制作时间戳\}.\{操作系统大版本号\}.\{体系架构\}.rpm`
+        补丁RPM包的格式为`kernel-hotfix-\{hotfix\_id\}-\{操作系统子版本号\}-\{hotfix版本号\}-\{hotfix制作时间戳\}.\{操作系统大版本号\}.\{体系架构\}.rpm`。
 
         例如上图所示的格式RPM包名称说明：
 
