--- a/cn.zh-CN/镜像/操作系统停止支持计划.md
+++ b/cn.zh-CN/镜像/操作系统停止支持计划.md
@@ -48,10 +48,10 @@ keyword: [eol, 下线声明, 阿里云, ecs]
 
     |版本|停止支持日期|
     |--|------|
-    |Ubuntu 20.04 LTS|待定|
-    |Ubuntu 18.04 LTS|2028-04|
-    |Ubuntu 16.04 LTS|2024-04|
-    |Ubuntu 14.04 LTS|2022-04|
+    |Ubuntu 20.04 LTS|2025-04|
+    |Ubuntu 18.04 LTS|2023-04|
+    |Ubuntu 16.04 LTS|2021-04停止维护后可继续获取安全更新。具体操作，请参见[Ubuntu 16.04 LTS停止支持维护后如何继续安全更新](/cn.zh-CN/镜像/常见问题/Ubuntu 16.04 LTS停止支持维护后如何继续安全更新.md)。 |
+    |Ubuntu 14.04 LTS|2019-04|
 
 -   Windows Server
 
