--- a/intl.zh-CN/镜像/Alibaba Cloud Linux 2/Alibaba Cloud Linux 2支持内核热补丁/内核热补丁操作说明.md
+++ b/intl.zh-CN/镜像/Alibaba Cloud Linux 2/Alibaba Cloud Linux 2支持内核热补丁/内核热补丁操作说明.md
@@ -61,7 +61,7 @@
 
 1.  远程连接需要热补丁的Alibaba Cloud Linux实例。
 
-    具体操作，请参见[通过密码或密钥认证登录Linux实例]()。
+    具体操作，请参见[连接方式概述](/intl.zh-CN/实例/连接实例/连接方式概述.md)。
 
 2.  运行以下命令，安装kpatch工具。
 
