--- a/cn.zh-CN/安全/安全最佳实践.md
+++ b/cn.zh-CN/安全/安全最佳实践.md
@@ -184,7 +184,7 @@
 
 -   提升登录配置的安全性。
     -   Linux实例：
-        -   配置仅允许使用SSH密钥对登录Linux实例。SSH密钥对通过加密算法生成一对密钥，默认采用RSA 2048位的加密方式，相比密码更加安全和便捷。关于SSH密钥对的特性和操作介绍，请参见[SSH密钥对概述](/cn.zh-CN/安全/SSH密钥对/SSH密钥对概述.md)、[通过密码或密钥认证登录Linux实例](/cn.zh-CN/实例/连接实例/使用Workbench连接实例/通过密码或密钥认证登录Linux实例.md)、[使用SSH密钥对连接Linux实例](/cn.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/使用SSH密钥对连接Linux实例.md)。
+        -   配置仅允许使用SSH密钥对登录Linux实例。SSH密钥对通过加密算法生成一对密钥，默认采用RSA 2048位的加密方式，相比密码更加安全和便捷。关于SSH密钥对的特性和操作介绍，请参见[SSH密钥对概述](/cn.zh-CN/安全/SSH密钥对/SSH密钥对概述.md)、[通过密码或密钥认证登录Linux实例](/cn.zh-CN/实例/连接实例/使用Workbench连接实例/通过密码或密钥认证登录Linux实例.md)、[通过密钥认证登录Linux实例](/cn.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/使用SSH密钥对连接Linux实例.md)。
         -   日常不使用root用户登录Linux实例，使用其他用户作为管理员。如果该用户执行需要管理员权限的操作，可以通过sudo命令提权。
     -   Windows实例：使用强密码，8~30个字符，必须至少同时包含大写字母、小写字母、数字、特殊字符（`()`~!@#$%^&*_-+=|{}[]:;'<>,.?/`）中的三项，建议包含特殊字符。使用密码登录实例时，建议定期更换密码。
 -   保护服务端口。
@@ -195,7 +195,7 @@
 
 -   避免使用弱口令。
 
-    使用弱口令容易被猜到或破解，然后非法登录服务器窃取数据或破坏服务器。建议您设置复杂的密码并定期修改密码，更多信息，请参见[提升登录口令安全最佳实践](/cn.zh-CN/安全防范/基线检查/提升登录口令安全最佳实践.md)。
+    使用弱口令容易被猜到或破解，然后非法登录服务器窃取数据或破坏服务器。建议您设置复杂的密码并定期修改密码。更多信息，请参见[提升登录口令安全最佳实践](/cn.zh-CN/安全防范/基线检查/提升登录口令安全最佳实践.md)。
 
 
 ## 使用服务时遵循安全做法
@@ -224,7 +224,7 @@
 
 -   使用操作审计功能。
 
-    操作审计可以记录账号的操作事件，并将记录文件保存到SLS Logstore或OSS存储空间中，供您进行安全分析、合规审计和资源变更跟踪。具体操作，请参见[创建单账号跟踪](/cn.zh-CN/管理单账号跟踪/创建单账号跟踪.md)。操作审计的应用示例如下：
+    操作审计可以记录账号的操作事件，并将记录文件保存到SLS Logstore或OSS存储空间中，供您进行安全分析、合规审计和资源变更跟踪。具体操作，请参见[创建单账号跟踪](/cn.zh-CN/单账号跟踪（适用于个人用户）/创建单账号跟踪.md)。操作审计的应用示例如下：
 
     -   分析登录时间、登录IP、是否使用多因素认证MFA登录等信息，判断账号是否存在异常登录等安全问题。
     -   如果组织内有多名成员，并使用了访问控制RAM管理成员的身份，获取每个成员的详细操作记录，满足组织合规性审计需要。
