--- a/intl.zh-CN/安全/安全最佳实践.md
+++ b/intl.zh-CN/安全/安全最佳实践.md
@@ -49,14 +49,6 @@
 
     ![instance-type](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0334133261/p280229.png)
 
--   为有等级保护要求的业务选择等保合规镜像。
-
-    选择阿里云自研的Alibaba Cloud Linux 2.1903 LTS 64位等保2.0三级版镜像后，无需额外配置即可满足身份鉴别、访问控制、安全审计、入侵防范、恶意代码防范的等保合规要求。
-
-    在创建实例时选择对应镜像即可，关于该等保合规镜像的使用方法，请参见[Alibaba Cloud Linux等保2.0三级版镜像使用说明]()。
-
-    ![image](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0334133261/p280231.png)
-
 -   为使用公共镜像的实例启用安全加固。
 
     启用安全加固的实例在启动时会加载基础安全组件，支持检测异常登录、DDoS攻击、主流漏洞以及云产品安全配置等，并可以通过云安全中心统一管理资产。更多信息，请参见[云安全中心免费版简介](/intl.zh-CN/动态与公告/云安全中心免费版简介.md)。
@@ -93,7 +85,7 @@
     -   将安全组作为白名单使用，即默认拒绝所有访问，通过添加安全组规则设置允许访问的端口范围和授权对象。安全组支持五元组规则，您可以精确控制源IP、源端口、目的IP、目的端口以及传输层协议，更多信息，请参见[安全组五元组规则](/intl.zh-CN/最佳实践/安全/安全组五元组规则.md)。
     -   添加安全组规则时遵循最小授权原则。例如，开放Linux实例的22端口用于远程登录时，建议仅允许特定的IP访问，而非所有IP（`0.0.0.0/0`）。
 
-        阿里云提供潜在高危安全组检测功能，帮助您及时发现未限制访问的安全组规则。具体操作，请参见[查看潜在高危安全组]()。
+        阿里云提供潜在高危安全组检测功能，帮助您及时发现未限制访问的安全组规则。
 
         如果发现未限制访问的安全组规则，请审视是否需要开放对应的端口，并及时修改过高的授权。例如，如果实例上安装了MySQL数据库服务，不应默认向公网开放3306端口。请将当前安全组规则的改为拒绝所有IP访问，将优先级设为最低，然后遵循最小授权原则添加允许访问的安全组规则。
 
@@ -146,7 +138,7 @@
 
 ## 使用云安全产品构建安全防御体系
 
-阿里云提供全面的安全产品和服务，帮助您全面提升云上资产在各种场景下的安全性。更多信息，请参见[阿里云安全介绍]()。
+阿里云提供全面的安全产品和服务，帮助您全面提升云上资产在各种场景下的安全性。
 
 -   使用阿里云DDoS防护服务抵御网络流量攻击。
 
@@ -184,7 +176,7 @@
 
 -   提升登录配置的安全性。
     -   Linux实例：
-        -   配置仅允许使用SSH密钥对登录Linux实例。SSH密钥对通过加密算法生成一对密钥，默认采用RSA 2048位的加密方式，相比密码更加安全和便捷。关于SSH密钥对的特性和操作介绍，请参见[SSH密钥对概述](/intl.zh-CN/安全/SSH密钥对/SSH密钥对概述.md)、[通过密码或密钥认证登录Linux实例]()、[通过密钥认证登录Linux实例](/intl.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/使用SSH密钥对连接Linux实例.md)。
+        -   配置仅允许使用SSH密钥对登录Linux实例。SSH密钥对通过加密算法生成一对密钥，默认采用RSA 2048位的加密方式，相比密码更加安全和便捷。关于SSH密钥对的特性和操作介绍，请参见[SSH密钥对概述](/intl.zh-CN/安全/SSH密钥对/SSH密钥对概述.md)、[通过密钥认证登录Linux实例](/intl.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/使用SSH密钥对连接Linux实例.md)。
         -   日常不使用root用户登录Linux实例，使用其他用户作为管理员。如果该用户执行需要管理员权限的操作，可以通过sudo命令提权。
     -   Windows实例：使用强密码，8~30个字符，必须至少同时包含大写字母、小写字母、数字、特殊字符（`()`~!@#$%^&*_-+=|{}[]:;'<>,.?/`）中的三项，建议包含特殊字符。使用密码登录实例时，建议定期更换密码。
 -   保护服务端口。
@@ -195,7 +187,7 @@
 
 -   避免使用弱口令。
 
-    使用弱口令容易被猜到或破解，然后非法登录服务器窃取数据或破坏服务器。建议您设置复杂的密码并定期修改密码，更多信息，请参见[提升登录口令安全最佳实践]()。
+    使用弱口令容易被猜到或破解，然后非法登录服务器窃取数据或破坏服务器。建议您设置复杂的密码并定期修改密码。
 
 
 ## 使用服务时遵循安全做法
