--- a/cn.zh-CN/实例/实例规格族.md
+++ b/cn.zh-CN/实例/实例规格族.md
@@ -81,7 +81,8 @@ keyword: [ECS实例规格族, 实例规格族]
 |企业级异构计算规格族群|
 |-----------|
 |推荐|其他在售（如果售罄，建议使用推荐规格族）|
-|-   [GPU计算型实例规格族gn7](#gn7)
+|-   [GPU计算型实例规格族gn7i](#gn7i)
+-   [GPU计算型实例规格族gn7](#gn7)
 -   [轻量级GPU计算型实例规格族vgn6i](#vgn6i)
 -   [GPU计算型实例规格族gn6i](#gn6i)
 -   [GPU计算型实例规格族gn6e](#gn6e)
@@ -2620,6 +2621,45 @@ hfg5包括的实例规格及指标数据如下表所示。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
 -   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
+## GPU计算型实例规格族gn7i
+
+本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+
+gn7i的特点如下：
+
+-   依托第三代神龙架构，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
+-   计算：
+    -   采用NVIDIA A10 GPU计算卡
+        -   创新的Ampere架构
+        -   支持RTX、TensorRT等常用加速功能
+    -   处理器：2.9 GHz主频的Intel ® Xeon ® 可扩展处理器（Ice Lake），全核睿频3.5 GHz
+    -   最大可提供752 GiB内存，相比gn6i大幅提升
+-   存储：
+    -   I/O优化实例
+    -   支持ESSD云盘、SSD云盘和高效云盘
+-   网络：
+    -   支持IPv6
+    -   实例网络性能与计算规格对应（规格越高网络性能越强）
+-   适用场景：
+    -   配备高性能CPU、内存、GPU，可以处理更多并发AI推理任务，适用于图像识别、语音识别、行为识别业务
+    -   支持RTX功能，搭配高主频CPU，提供高性能的3D图形虚拟化能力，适用于远程图形设计、云游戏等高强度图形处理业务
+
+gn7i包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|
+|:---|:---|:------|:--|:----|------------|:----------|:--|:---|
+|ecs.gn7i-c8g1.2xlarge|8|30|NVIDIA A10 \* 1|24GB \* 1|16|160|8|4|
+|ecs.gn7i-c16g1.4xlarge|16|60|NVIDIA A10 \* 1|24GB \* 1|16|300|8|8|
+|ecs.gn7i-c32g1.8xlarge|32|188|NVIDIA A10 \* 1|24GB \* 1|16|600|12|8|
+|ecs.gn7i-c80g1.20xlarge|80|572|NVIDIA A10 \* 1|24GB \* 1|16|1200|16|15|
+|ecs.gn7i-c32g1.16xlarge|64|376|NVIDIA A10 \* 2|24GB \* 2|32|1200|16|15|
+|ecs.gn7i-c32g1.32xlarge|128|752|NVIDIA A10 \* 4|24GB \* 4|64|2400|32|15|
+
+**说明：**
+
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
+
 ## GPU计算型实例规格族gn7
 
 该规格族正在邀测中，暂未开放售卖。
@@ -2645,9 +2685,9 @@ gn7包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|
 |:---|:---|:------|:--|:----|------------|:----------|:--|:---|
-|ecs.gn7-c12g1.3xlarge|12|95.0|NVIDIA A100 \* 1|40GB \* 1|4.0|250|4|8|
-|ecs.gn7-c13g1.13xlarge|52|380.0|NVIDIA A100 \* 4|40GB \* 4|15.0|900|16|8|
-|ecs.gn7-c13g1.26xlarge|104|760.0|NVIDIA A100 \* 8|40GB \* 8|30.0|1800|16|16|
+|ecs.gn7-c12g1.3xlarge|12|95|NVIDIA A100 \* 1|40GB \* 1|4|250|4|8|
+|ecs.gn7-c13g1.13xlarge|52|380|NVIDIA A100 \* 4|40GB \* 4|15|900|16|8|
+|ecs.gn7-c13g1.26xlarge|104|760|NVIDIA A100 \* 8|40GB \* 8|30|1800|16|16|
 
 **说明：**
 
@@ -2686,10 +2726,10 @@ vgn6i包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:--|:----|:-----------|:----------|:--|:---|-------|
-|ecs.vgn6i-m4.xlarge|4|23.0|NVIDIA T4 \* 1/4|16GB \* 1/4|3.0|50|2|4|10|
-|ecs.vgn6i-m8.2xlarge|10|46.0|NVIDIA T4 \* 1/2|16GB \* 1/2|4.0|80|4|5|20|
-|ecs.vgn6i-m4-vws.xlarge|4|23.0|NVIDIA T4 \* 1/4|16GB \* 1/4|3.0|50|2|4|10|
-|ecs.vgn6i-m8-vws.2xlarge|10|46.0|NVIDIA T4 \* 1/2|16GB \* 1/2|4.0|80|4|5|20|
+|ecs.vgn6i-m4.xlarge|4|23|NVIDIA T4 \* 1/4|16GB \* 1/4|3|50|2|4|10|
+|ecs.vgn6i-m8.2xlarge|10|46|NVIDIA T4 \* 1/2|16GB \* 1/2|4|80|4|5|20|
+|ecs.vgn6i-m4-vws.xlarge|4|23|NVIDIA T4 \* 1/4|16GB \* 1/4|3|50|2|4|10|
+|ecs.vgn6i-m8-vws.2xlarge|10|46|NVIDIA T4 \* 1/2|16GB \* 1/2|4|80|4|5|20|
 
 **说明：**
 
@@ -2727,12 +2767,12 @@ gn6i包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|存储IOPS基准（万）|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:--|:----|------------|:----------|-----------|:--|:---|-------|
-|ecs.gn6i-c4g1.xlarge|4|15.0|NVIDIA T4 \* 1|16GB \* 1|4.0|50|无|2|2|10|
-|ecs.gn6i-c8g1.2xlarge|8|31.0|NVIDIA T4 \* 1|16GB \* 1|5.0|80|无|2|2|10|
-|ecs.gn6i-c16g1.4xlarge|16|62.0|NVIDIA T4 \* 1|16GB \* 1|6.0|100|无|4|3|10|
-|ecs.gn6i-c24g1.6xlarge|24|93.0|NVIDIA T4 \* 1|16GB \* 1|7.5|120|无|6|4|10|
-|ecs.gn6i-c24g1.12xlarge|48|186.0|NVIDIA T4 \* 2|16GB \* 2|15.0|240|无|12|6|10|
-|ecs.gn6i-c24g1.24xlarge|96|372.0|NVIDIA T4 \* 4|16GB \* 4|30.0|480|25|24|8|10|
+|ecs.gn6i-c4g1.xlarge|4|15|NVIDIA T4 \* 1|16GB \* 1|4|50|无|2|2|10|
+|ecs.gn6i-c8g1.2xlarge|8|31|NVIDIA T4 \* 1|16GB \* 1|5|80|无|2|2|10|
+|ecs.gn6i-c16g1.4xlarge|16|62|NVIDIA T4 \* 1|16GB \* 1|6|100|无|4|3|10|
+|ecs.gn6i-c24g1.6xlarge|24|93|NVIDIA T4 \* 1|16GB \* 1|7.5|120|无|6|4|10|
+|ecs.gn6i-c24g1.12xlarge|48|186|NVIDIA T4 \* 2|16GB \* 2|15|240|无|12|6|10|
+|ecs.gn6i-c24g1.24xlarge|96|372|NVIDIA T4 \* 4|16GB \* 4|30|480|25|24|8|10|
 
 **说明：**
 
@@ -2767,9 +2807,9 @@ gn6e包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:--|:----|:-----------|:----------|:--|:---|-------|
-|ecs.gn6e-c12g1.3xlarge|12|92.0|NVIDIA V100 \* 1|32GB \* 1|5.0|80|8|6|10|
-|ecs.gn6e-c12g1.12xlarge|48|368.0|NVIDIA V100 \* 4|32GB \* 4|16.0|240|8|8|20|
-|ecs.gn6e-c12g1.24xlarge|96|736.0|NVIDIA V100 \* 8|32GB \* 8|32.0|480|16|8|20|
+|ecs.gn6e-c12g1.3xlarge|12|92|NVIDIA V100 \* 1|32GB \* 1|5|80|8|6|10|
+|ecs.gn6e-c12g1.12xlarge|48|368|NVIDIA V100 \* 4|32GB \* 4|16|240|8|8|20|
+|ecs.gn6e-c12g1.24xlarge|96|736|NVIDIA V100 \* 8|32GB \* 8|32|480|16|8|20|
 
 **说明：**
 
@@ -2804,10 +2844,10 @@ gn6v包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|存储IOPS基准（万）|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:--|:----|:-----------|:----------|-----------|:--|:---|-------|
-|ecs.gn6v-c8g1.2xlarge|8|32.0|NVIDIA V100 \* 1|16GB \* 1|2.5|80|无|4|4|10|
-|ecs.gn6v-c8g1.8xlarge|32|128.0|NVIDIA V100 \* 4|16GB \* 4|10.0|200|无|8|8|20|
-|ecs.gn6v-c8g1.16xlarge|64|256.0|NVIDIA V100 \* 8|16GB \* 8|20.0|250|无|16|8|20|
-|ecs.gn6v-c10g1.20xlarge|82|336.0|NVIDIA V100 \* 8|16GB \* 8|32.0|450|25|16|8|20|
+|ecs.gn6v-c8g1.2xlarge|8|32|NVIDIA V100 \* 1|16GB \* 1|2.5|80|无|4|4|10|
+|ecs.gn6v-c8g1.8xlarge|32|128|NVIDIA V100 \* 4|16GB \* 4|10|200|无|8|8|20|
+|ecs.gn6v-c8g1.16xlarge|64|256|NVIDIA V100 \* 8|16GB \* 8|20|250|无|16|8|20|
+|ecs.gn6v-c10g1.20xlarge|82|336|NVIDIA V100 \* 8|16GB \* 8|32|450|25|16|8|20|
 
 **说明：**
 
@@ -2961,10 +3001,10 @@ vgn5i包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:--|:----|:-----------|:----------|:--|:---|-------|
-|ecs.vgn5i-m1.large|2|6.0|NVIDIA P4 \* 1/8|8GB \* 1/8|1.0|30|2|2|6|
-|ecs.vgn5i-m2.xlarge|4|12.0|NVIDIA P4 \* 1/4|8GB \* 1/4|2.0|50|2|3|10|
-|ecs.vgn5i-m4.2xlarge|8|24.0|NVIDIA P4 \* 1/2|8GB \* 1/2|3.0|80|2|4|10|
-|ecs.vgn5i-m8.4xlarge|16|48.0|NVIDIA P4 \* 1|8GB \* 1|5.0|100|4|5|20|
+|ecs.vgn5i-m1.large|2|6|NVIDIA P4 \* 1/8|8GB \* 1/8|1|30|2|2|6|
+|ecs.vgn5i-m2.xlarge|4|12|NVIDIA P4 \* 1/4|8GB \* 1/4|2|50|2|3|10|
+|ecs.vgn5i-m4.2xlarge|8|24|NVIDIA P4 \* 1/2|8GB \* 1/2|3|80|2|4|10|
+|ecs.vgn5i-m8.4xlarge|16|48|NVIDIA P4 \* 1|8GB \* 1|5|100|4|5|20|
 
 **说明：**
 
@@ -2994,14 +3034,14 @@ gn5包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|本地存储（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:--------|:--|:----|:-----------|:----------|:--|:---|-------|
-|ecs.gn5-c4g1.xlarge|4|30.0|440|NVIDIA P100 \* 1|16GB \* 1|3.0|30|1|3|10|
-|ecs.gn5-c8g1.2xlarge|8|60.0|440|NVIDIA P100 \* 1|16GB \* 1|3.0|40|1|4|10|
-|ecs.gn5-c4g1.2xlarge|8|60.0|880|NVIDIA P100 \* 2|16GB \* 2|5.0|100|2|4|10|
-|ecs.gn5-c8g1.4xlarge|16|120.0|880|NVIDIA P100 \* 2|16GB \* 2|5.0|100|4|8|20|
-|ecs.gn5-c28g1.7xlarge|28|112.0|440|NVIDIA P100 \* 1|16GB \* 1|5.0|100|8|8|20|
-|ecs.gn5-c8g1.8xlarge|32|240.0|1760|NVIDIA P100 \* 4|16GB \* 4|10.0|200|8|8|20|
-|ecs.gn5-c28g1.14xlarge|56|224.0|880|NVIDIA P100 \* 2|16GB \* 2|10.0|200|14|8|20|
-|ecs.gn5-c8g1.14xlarge|54|480.0|3520|NVIDIA P100 \* 8|16GB \* 8|25.0|400|14|8|20|
+|ecs.gn5-c4g1.xlarge|4|30|440|NVIDIA P100 \* 1|16GB \* 1|3|30|1|3|10|
+|ecs.gn5-c8g1.2xlarge|8|60|440|NVIDIA P100 \* 1|16GB \* 1|3|40|1|4|10|
+|ecs.gn5-c4g1.2xlarge|8|60|880|NVIDIA P100 \* 2|16GB \* 2|5|100|2|4|10|
+|ecs.gn5-c8g1.4xlarge|16|120|880|NVIDIA P100 \* 2|16GB \* 2|5|100|4|8|20|
+|ecs.gn5-c28g1.7xlarge|28|112|440|NVIDIA P100 \* 1|16GB \* 1|5|100|8|8|20|
+|ecs.gn5-c8g1.8xlarge|32|240|1760|NVIDIA P100 \* 4|16GB \* 4|10|200|8|8|20|
+|ecs.gn5-c28g1.14xlarge|56|224|880|NVIDIA P100 \* 2|16GB \* 2|10|200|14|8|20|
+|ecs.gn5-c8g1.14xlarge|54|480|3520|NVIDIA P100 \* 8|16GB \* 8|25|400|14|8|20|
 
 **说明：**
 
@@ -3031,12 +3071,12 @@ gn5i包括的实例规格及指标数据如下：
 
 |实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:--|:----|:-----------|:----------|:--|:---|-------|
-|ecs.gn5i-c2g1.large|2|8.0|NVIDIA P4 \* 1|8GB \* 1|1.0|10|2|2|6|
-|ecs.gn5i-c4g1.xlarge|4|16.0|NVIDIA P4 \* 1|8GB \* 1|1.5|20|2|3|10|
-|ecs.gn5i-c8g1.2xlarge|8|32.0|NVIDIA P4 \* 1|8GB \* 1|2.0|40|4|4|10|
-|ecs.gn5i-c16g1.4xlarge|16|64.0|NVIDIA P4 \* 1|8GB \* 1|3.0|80|4|8|20|
-|ecs.gn5i-c16g1.8xlarge|32|128.0|NVIDIA P4 \* 2|8GB \* 2|6.0|120|8|8|20|
-|ecs.gn5i-c28g1.14xlarge|56|224.0|NVIDIA P4 \* 2|8GB \* 2|10.0|200|14|8|20|
+|ecs.gn5i-c2g1.large|2|8|NVIDIA P4 \* 1|8GB \* 1|1|10|2|2|6|
+|ecs.gn5i-c4g1.xlarge|4|16|NVIDIA P4 \* 1|8GB \* 1|1.5|20|2|3|10|
+|ecs.gn5i-c8g1.2xlarge|8|32|NVIDIA P4 \* 1|8GB \* 1|2|40|4|4|10|
+|ecs.gn5i-c16g1.4xlarge|16|64|NVIDIA P4 \* 1|8GB \* 1|3|80|4|8|20|
+|ecs.gn5i-c16g1.8xlarge|32|128|NVIDIA P4 \* 2|8GB \* 2|6|120|8|8|20|
+|ecs.gn5i-c28g1.14xlarge|56|224|NVIDIA P4 \* 2|8GB \* 2|10|200|14|8|20|
 
 **说明：**
 
