--- a/cn.zh-CN/动态与公告/新功能发布记录.md
+++ b/cn.zh-CN/动态与公告/新功能发布记录.md
@@ -7,6 +7,12 @@
 
 更多有关阿里云最新产品动态，请订阅[云产品动态](https://www.aliyun.com/product/new)。
 
+## 2021年07月
+
+|功能名称|功能描述|发布时间|发布地域|相关文档|
+|----|:---|:---|----|:---|
+|实例规格族|发布GPU计算型实例规格族gn7i。|2021-07-01|全部|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
+
 ## 2021年06月
 
 |功能名称|功能描述|发布时间|发布地域|相关文档|
@@ -66,7 +72,7 @@
 
 |功能名称|功能描述|发布时间|发布地域|相关文档|
 |----|:---|:---|----|:---|
-|资源保障|资源保障是包括资源供应量化感知、资源的确定性预定、私有池规划使用的全链路资源确定性服务。|2020-12-14|部分|[资源保障概述](/cn.zh-CN/标签与资源/资源保障/资源保障概述.md)|
+|资源保障|资源保障是包括资源供应量化感知、资源的确定性预定、私有池规划使用的全链路资源确定性服务。|2020-12-14|部分|[资源保障概述](/cn.zh-CN/实例/选择实例购买方式/资源保障/资源保障概述.md)|
 |faasutil|faasutil是阿里云FPGA云服务器提供的新一代命令行工具，进一步提高FPGA云服务器的易用性、稳定性、安全性和可扩展性。|2020-12-08|部分|-   [获取faasutil]()
 -   [使用faasutil]() |
 |快照|快照极速可用功能在华北5（呼和浩特）上线公测。|2020-12-03|部分|[开启或关闭快照极速可用功能](/cn.zh-CN/快照/使用快照/开启或关闭快照极速可用功能.md)|
