--- a/intl.zh-CN/产品计费/计费方式/节省计划.md
+++ b/intl.zh-CN/产品计费/计费方式/节省计划.md
@@ -57,7 +57,7 @@ keyword: [Savings Plans, 按量付费, 实例计费方式, 折扣]
 
 -   如果您同时购买了通用型和ECS计算型的节省计划，优先匹配ECS计算型的节省计划进行抵扣。
 -   如果您的按量付费本身折扣力度比节省计划更大，优先使用更大的折扣，且折扣的费用支持从节省计划的承诺消费金额中抵扣。
--   如果您购买了多种节省计划，且不同计划之间折扣率不一致（例如购买了1年期和3年期节省计划，或购买了全预付、部分预付和0预付的节省计划），则先购买的节省计划先生效，不按照折扣率高低调整生效顺序。
+-   如果您购买了多种节省计划，且不同计划之间折扣率不一致，则先购买的节省计划先生效，不按照折扣率高低调整生效顺序。例如，先购买全预付节省计划，然后购买部分预付节省计划，则先购买的全预付节省计划先生效，按照其折扣率抵扣账单。
 
 ## 费用抵扣示例
 
