--- a/cn.zh-CN/网络/前缀列表/管理前缀列表条目.md
+++ b/cn.zh-CN/网络/前缀列表/管理前缀列表条目.md
@@ -2,7 +2,7 @@
 
 条目由CIDR地址块和描述构成，您可以在前缀列表详情页中新增、修改或删除条目。
 
-如果您使用RAM用户，请为RAM用户添加前缀列表相关权限。具体操作，请参见[为RAM用户授予前缀列表相关权限]()。
+如果您使用RAM用户，请为RAM用户添加前缀列表相关权限。具体操作，请参见[为RAM用户授予前缀列表相关权限](/cn.zh-CN/网络/前缀列表/为RAM用户授予前缀列表相关权限.md)。
 
 **说明：** 当前仅部分地域支持使用前缀列表功能。
 
@@ -27,6 +27,7 @@
         前缀列表条目的约束如下：
 
         -   总条目数量不能超过**最大条目容量**。
+        -   支持批量输入多个CIDR地址块，每个CIDR地址块之间以空格或半角逗号（,）分隔。
         -   条目中的CIDR地址块类型根据**地址族**决定，一个前缀列表不能同时包含IPv4和IPv6的CIDR地址块。
         -   条目中的CIDR地址块不能重复。例如，您不能设置两个192.168.1.0/24。
         -   支持设置IP地址，系统会自动转换为CIDR地址块的形式。
@@ -58,6 +59,7 @@
 
     前缀列表条目的限制如下：
 
+    -   支持批量输入多个CIDR地址块，每个CIDR地址块之间以空格或半角逗号（,）分隔。
     -   条目中的CIDR地址块类型根据**地址族**决定，一个前缀列表不能同时包含IPv4和IPv6的CIDR地址块。
     -   条目中的CIDR地址块不能重复。例如，您不能设置两个192.168.1.0/24。
     -   支持设置IP地址，系统会自动转换为CIDR地址块的形式。
