--- a/intl.zh-CN/网络/前缀列表/创建前缀列表.md
+++ b/intl.zh-CN/网络/前缀列表/创建前缀列表.md
@@ -6,7 +6,7 @@ keyword: [IP地址合集, IP段合集, 批量设置IP段]
 
 前缀列表是一些网络前缀（即CIDR地址块）的集合，您可以在配置其他资源的网络规则时引用前缀列表。本文介绍如何新建一个前缀列表。
 
-如果您使用RAM用户，请为RAM用户添加前缀列表相关权限。具体操作，请参见[为RAM用户授予前缀列表相关权限]()。
+如果您使用RAM用户，请为RAM用户添加前缀列表相关权限。具体操作，请参见[为RAM用户授予前缀列表相关权限](/intl.zh-CN/网络/前缀列表/为RAM用户授予前缀列表相关权限.md)。
 
 **说明：** 当前仅部分地域支持使用前缀列表功能。
 
@@ -20,7 +20,7 @@ keyword: [IP地址合集, IP段合集, 批量设置IP段]
 
 5.  在**创建前缀列表**对话框中，设置前缀列表参数。
 
-    ![创建前缀列表](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2304316161/p243111.png)
+    ![创建前缀列表](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9677125261/p243111.png)
 
     |参数|描述|
     |--|--|
@@ -34,6 +34,7 @@ keyword: [IP地址合集, IP段合集, 批量设置IP段]
     |前缀列表条目|设置前缀列表的CIDR地址块信息。您可以单击**增加条目**新增CIDR地址块和描述信息。前缀列表条目的约束如下：
 
     -   总条目数量不能超过**最大条目容量**。
+    -   支持批量输入多个CIDR地址块，每个CIDR地址块之间以空格或半角逗号（,）分隔。
     -   条目中的CIDR地址块类型根据**地址族**决定，一个前缀列表不能同时包含IPv4和IPv6的CIDR地址块。
     -   条目中的CIDR地址块不能重复。例如，您不能设置两个192.168.1.0/24。
     -   支持设置IP地址，系统会自动转换为CIDR地址块的形式。
@@ -49,7 +50,7 @@ keyword: [IP地址合集, IP段合集, 批量设置IP段]
 
 创建前缀列表后，您可以进行以下操作：
 
--   维护前缀列表，如果需要变更前缀列表名称、前缀列表条目等信息，请参见[管理前缀列表条目]()。
+-   维护前缀列表，如果需要变更前缀列表名称、前缀列表条目等信息，请参见[管理前缀列表条目](/intl.zh-CN/网络/前缀列表/管理前缀列表条目.md)。
 -   引用前缀列表，如果需要在安全组规则中引用前缀列表，请参见[添加安全组规则](/intl.zh-CN/安全/安全组/添加安全组规则.md)。
 
 **相关文档**  
