--- a/intl.zh-CN/网络/配置IPv6地址/Linux实例配置IPv6地址/步骤6：测试网络连通性.md
+++ b/intl.zh-CN/网络/配置IPv6地址/Linux实例配置IPv6地址/步骤6：测试网络连通性.md
@@ -6,7 +6,7 @@
 
 1.  远程连接已配置IPv6地址的ECS实例。
 
-    具体操作请参见[通过密码或密钥认证登录Linux实例]()。
+    具体操作请参见[通过密码认证登录Linux实例](/intl.zh-CN/实例/连接实例/使用VNC连接实例/通过密码认证登录Linux实例.md)。
 
 2.  运行以下命令验证网络连通性。
 
