--- a/cn.zh-CN/网络/配置IPv6地址/Windows实例配置IPv6地址/步骤6：测试网络连通性.md
+++ b/cn.zh-CN/网络/配置IPv6地址/Windows实例配置IPv6地址/步骤6：测试网络连通性.md
@@ -6,7 +6,7 @@
 
 1.  远程连接已配置IPv6地址的ECS实例。
 
-    具体操作请参见[通过Workbench远程连接Windows实例](/cn.zh-CN/实例/连接实例/连接Windows实例/通过Workbench远程连接Windows实例.md)。
+    具体操作请参见[通过密码或密钥认证登录Windows实例](/cn.zh-CN/实例/连接实例/使用Workbench连接实例/通过密码或密钥认证登录Windows实例.md)。
 
 2.  打开命令行工具。
 
@@ -22,6 +22,6 @@
 
     测试结果如下图所示。
 
-    ![ping -6](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8270013061/p174644.png)
+    ![ping -6](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8270013061/p174644.png)
 
 
