--- a/cn.zh-CN/实例/选择实例规格/通用型.md
+++ b/cn.zh-CN/实例/选择实例规格/通用型.md
@@ -35,7 +35,7 @@ g7a的特点如下：
     -   处理器：2.55 GHz主频的AMD EPYCTM MILAN处理器，单核睿频最高3.5 GHz，计算性能稳定
     -   支持开启或关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例属性/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
@@ -134,6 +134,9 @@ g7t的特点如下：
 
 -   支持Intel® SGX加密计算，最大支持256 GiB加密内存，保障关键代码和数据的机密性与完整性不受恶意软件的破坏。
 -   支持虚拟机形态的SGX技术，您可以按需灵活选择实例规格。
+
+    **说明：** 如果您在Intel SGX Enclave中使用了与硬件相绑定的密钥加密数据（例如基于SGX Sealing），实例所在的宿主机发生变化后将导致无法解密对应数据。建议您在应用层做好数据冗余和备份，以保证应用的可靠性。
+
 -   依托TPM/TCM芯片，从底层服务器硬件到GuestOS的启动链均进行度量和验证，实现可信启动。
 -   依托第三代神龙架构，将大量虚拟化功能卸载到专用硬件，降低虚拟化开销，提供稳定可预期的超高性能。
 -   计算：
@@ -172,8 +175,10 @@ g7t包括的实例规格及指标数据如下表所示。
 
 **说明：**
 
--   本实例规格族正在邀测中，资源有限，无SLA保证。如果您确认申请使用，请按照业务最小需求申请。
 -   Intel Ice Lake仅支持基于Intel SGX DCAP的远程证明方式，不支持基于Intel EPID的远程证明方式，您可能需要适配程序后才能正常使用远程证明功能。更多远程证明的信息，请参见[attestation-service](https://software.intel.com/content/www/us/en/develop/topics/software-guard-extensions/attestation-services.html)。
+-   Intel SGX特性与宿主机的硬件绑定，本实例规格族不支持热迁移。
+-   实例变配规格、停机不收费等操作均可能造成实例所在的宿主机发生变化，请注意本规格族实例的宿主机变化带来的无法解密数据风险。
+-   实例默认未开启宕机自动迁移，您可以自行修改。具体操作，请参见[修改实例维护属性](/cn.zh-CN/实例/管理实例属性/修改实例维护属性.md)。宕机自动迁移会造成实例所在的宿主机发生变化，请注意本规格族实例的宿主机变化带来的无法解密数据风险。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
 -   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
 
@@ -270,7 +275,7 @@ g6a的特点如下：
     -   处理器：2.6 GHz主频的AMD EPYCTM ROME处理器，睿频3.3 GHz，计算性能稳定
     -   支持开启或关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例属性/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
@@ -323,7 +328,7 @@ g6t的特点如下：
     -   处理器：2.5 GHz主频、3.2 GHz睿频的Intel ® Xeon ® Platinum 8269（Cascade Lake），计算性能稳定
     -   支持开启和关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例属性/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
@@ -374,7 +379,7 @@ g6e的特点如下：
     -   处理器：2.5 GHz主频、3.2 GHz睿频的Intel ® Xeon ® Platinum 8269（Cascade），计算性能稳定
     -   支持开启或关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例属性/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
@@ -427,7 +432,7 @@ g6的特点如下：
     -   处理器：2.5 GHz主频的Intel ® Xeon ® Platinum 8269CY（Cascade Lake），睿频3.2 GHz，计算性能稳定
     -   支持开启或关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/cn.zh-CN/实例/管理实例属性/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
